[tool.poetry]
name = "keith_contributors"
version = "0.1.0"
description = "A script to create contributors page @ KeithF'em"
authors = ["Lautaro Mazzitelli <lmazzitelli@gmail.com>"]
license = "Attribution-NonCommercial-ShareAlike. CC BY-NC-SA"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pre-commit = "^2.10.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
